Add OpenSSL support using FFM API from Java 22
Backport from trunk.