@@ -109,6 +109,7 @@
   <property name="compile.release" value="11"/>
   <property name="min.java.version" value="11"/>
   <property name="build.java.version" value="17"/>
+  <property name="release.java.version" value="22"/>
 
   <!-- Check Java Build Version -->
   <fail message="Java version ${build.java.version} or newer is required (${java.version} is installed)">
@@ -249,7 +250,6 @@
     <pathelement location="${derby.jar}"/>
     <pathelement location="${derby-shared.jar}"/>
     <pathelement location="${derby-tools.jar}"/>
-    <pathelement location="${openssl-lib.jar}"/>
     <path refid="compile.classpath" />
     <path refid="tomcat.classpath" />
   </path>
@@ -314,9 +314,12 @@
     <include name="**/.gitignore"/>
     <include name="**/*.bnd"/>
     <include name="**/*.classpath"/>
+    <include name="**/*.conf"/>
     <include name="**/*.css"/>
     <include name="**/*.dtd"/>
     <include name="**/*.editorconfig"/>
+    <include name="**/*.h"/>
+    <include name="**/*.header"/>
     <include name="**/*.htm"/>
     <include name="**/*.html"/>
     <include name="**/*.iml"/>
@@ -456,6 +459,7 @@
     <exclude name="org/apache/tomcat/util/log" />
     <exclude name="org/apache/tomcat/util/modeler" />
     <exclude name="org/apache/tomcat/util/net" />
+    <exclude name="org/apache/tomcat/util/openssl"/>
     <exclude name="org/apache/tomcat/util/scan" />
   </patternset>
 
@@ -540,6 +544,7 @@
     <include name="org/apache/tomcat/util/json/**" />
     <include name="org/apache/tomcat/util/log/**" />
     <include name="org/apache/tomcat/util/net/**" />
+    <include name="org/apache/tomcat/util/openssl/**"/>
     <include name="org/apache/tomcat/util/res/**" />
     <include name="org/apache/tomcat/util/security/**" />
     <include name="org/apache/tomcat/util/threads/**" />
@@ -752,6 +757,7 @@
     <include name="org/apache/tomcat/util/log/**" />
     <include name="org/apache/tomcat/util/modeler/**" />
     <include name="org/apache/tomcat/util/net/**" />
+    <include name="org/apache/tomcat/util/openssl/**"/>
   </patternset>
 
   <patternset id="files.jasper">
@@ -891,6 +897,7 @@
         <exclude name="java/org/apache/el/parser/ELParser*.java" />
         <exclude name="java/org/apache/el/parser/Node.java" />
         <exclude name="java/org/apache/tomcat/util/json/JSONParser*.java" />
+        <exclude name="java/org/apache/tomcat/util/openssl/*.java" />
         <exclude name="**/*.jj" />
         <exclude name="java/org/apache/**/JJT*ParserState.java" />
         <exclude name="java/org/apache/**/ParseException.java" />
@@ -1009,6 +1016,26 @@
       <compilerarg value="-Xlint:unchecked"/>
       -->
       <classpath refid="compile.classpath" />
+      <exclude name="org/apache/tomcat/util/net/openssl/panama/**"/>
+      <exclude name="org/apache/tomcat/util/openssl/**"/>
+    </javac>
+    <!-- Compile internal server components that use FFM -->
+    <condition property="has-ffm">
+      <javaversion atleast="${release.java.version}" />
+    </condition>
+    <javac srcdir="java" destdir="${tomcat.classes}"
+           debug="${compile.debug}"
+           deprecation="${compile.deprecation}"
+           release="${release.java.version}"
+           encoding="ISO-8859-1"
+           includeAntRuntime="true"
+           if:set="has-ffm" >
+      <!-- Uncomment this to show unchecked warnings:
+      <compilerarg value="-Xlint:unchecked"/>
+      -->
+      <classpath refid="compile.classpath" />
+      <include name="org/apache/tomcat/util/net/openssl/panama/**"/>
+      <include name="org/apache/tomcat/util/openssl/**"/>
     </javac>
     <!-- Copy static resource files -->
     <copy todir="${tomcat.classes}" encoding="UTF-8">
@@ -1544,19 +1571,6 @@
     </delete>
     <copy file="${migration-lib.jar}" todir="${tomcat.build}/lib"/>
 
-    <!-- Delete all other versions of OpenSSL support for Tomcat and copy the current one -->
-    <!-- After module release
-    <local name="openssl-lib.jar.filename" />
-    <basename property="openssl-lib.jar.filename" file="${openssl-lib.jar}"/>
-    <delete verbose="true">
-      <fileset dir="${tomcat.build}/lib">
-        <include name="tomcat-coyote-openssl-*.jar"/>
-        <exclude name="${openssl-lib.jar.filename}"/>
-      </fileset>
-    </delete>
-    <copy file="${openssl-lib.jar}" todir="${tomcat.build}/lib"/>
-    -->
-
     <!-- Add sources for examples -->
     <antcall target="examples-sources" />
   </target>
@@ -1968,11 +1982,6 @@
               extension=".NIO2" />
   </target>
 
-  <target name="test-apr-exists" description="Checks for APR lib"
-          if="${execute.test.apr}">
-    <available file="${test.apr.loc}" property="apr.exists" />
-  </target>
-
   <target name="test-openssl-exists" description="Checks for the OpenSSL binary">
     <property environment="env" />
     <condition property="test.openssl.exists">
@@ -1989,23 +1998,10 @@
     </condition>
   </target>
 
-  <!-- Set Java 17 specific properties -->
-  <condition property="java17.nativeaccess" value="--enable-native-access=ALL-UNNAMED"><javaversion atleast="17"/></condition>
-  <property name="java17.nativeaccess" value="-Dtest.1=1"/>
-  <condition property="java17.addmodules" value="--add-modules"><javaversion exactly="17"/></condition>
-  <condition property="java17.addmodules" value="--enable-preview"><javaversion atleast="19"/></condition>
-  <property name="java17.addmodules" value="-Dtest.2=2"/>
-  <condition property="java17.incubatorforeign" value="jdk.incubator.foreign"><javaversion exactly="17"/></condition>
-  <property name="java17.incubatorforeign" value="-Dtest.3=3"/>
-  <condition property="runtests.librarypath" value="-Dtest.4=4">
-    <and>
-      <javaversion atleast="17"/>
-      <resourceexists>
-        <file file="${openssl-lib.jar}"/>
-      </resourceexists>
-    </and>
-  </condition>
-  <property name="runtests.librarypath" value="-Djava.library.path=${test.apr.loc}"/>
+  <!-- Set native specific properties -->
+  <condition property="native.nativeaccess" value="--enable-native-access=ALL-UNNAMED"><javaversion atleast="22"/></condition>
+  <property name="native.nativeaccess" value="-Dtest.1=1"/>
+  <property name="runtests.librarypath" value="-Djava.library.path=${test.apr.loc}${path.separator}${java.library.path}"/>
   <property name="opens.javalang" value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
   <property name="opens.javaio" value="--add-opens=java.base/java.io=ALL-UNNAMED"/>
   <property name="opens.sunrmi" value="--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"/>
@@ -2042,9 +2038,7 @@
           <jvmarg value="${opens.sunrmi}"/>
           <jvmarg value="${opens.javautil}"/>
           <jvmarg value="${opens.javautilconcurrent}"/>
-          <jvmarg value="${java17.nativeaccess}"/>
-          <jvmarg value="${java17.addmodules}"/>
-          <jvmarg value="${java17.incubatorforeign}"/>
+          <jvmarg value="${native.nativeaccess}"/>
 
           <classpath refid="tomcat.test.classpath" />
 
@@ -2420,6 +2414,8 @@ Apache Tomcat ${version} native binaries for Win64 AMD64/EMT64 platform.
         <include name="org/**"/>
         <exclude name="org/apache/el/parser/**"/>
         <exclude name="org/apache/tomcat/util/json/**"/>
+        <exclude name="org/apache/tomcat/util/net/openssl/panama/**"/>
+        <exclude name="org/apache/tomcat/util/openssl/**"/>
       </packageset>
       <!--jdbc-pool src files for javadoc-->
       <packageset dir="${tomcat.dist}/src/modules/jdbc-pool/src/main/java"/>
@@ -2702,6 +2698,19 @@ skip.installer property in build.properties" />
     <hashAndSign file="${tomcat.release}/v${version}/bin/${final.name}.exe" />
   </target>
 
+  <target name="release-version-check">
+    <!--FIXME: add version check for release once Java 22 has reasonable availability
+    <fail message="Java version ${release.java.version} or newer is required for release (${java.version} is installed)">
+      <condition>
+        <not><javaversion atleast="${release.java.version}" /></not>
+      </condition>
+    </fail>-->
+    <condition property="no-ffm">
+      <not><javaversion atleast="${release.java.version}" /></not>
+    </condition>
+    <echo level="error" if:set="no-ffm">JAVA VERSION 22 OR NEWER IS REQUIRED FOR RELEASE</echo>
+  </target>
+
   <target name="-pre-release-lone-target-check">
     <fail message="The pre-release target must be called all on its own. Specifically, you must run 'ant release' /after/ 'ant pre-release' in order to properly configure the build.">
       <condition>
@@ -2716,7 +2725,7 @@ skip.installer property in build.properties" />
     <input message="Enter ASF username" addproperty="release.asfusername" defaultValue="${user.name}" />
   </target>
 
-  <target name="pre-release" depends="-pre-release-lone-target-check, -pre-release-read-asf-username"
+  <target name="pre-release" depends="release-version-check,-pre-release-lone-target-check, -pre-release-read-asf-username"
       description="Prepares for a release build by writing build.properties.release which contains information about the release-build environment.">
     <antversion property="antversion"/>
     <echo file="build.properties.release"># -----------------------------------------------------------------------------
@@ -2843,7 +2852,7 @@ asf.ldap.username=${release.asfusername}
   </target>
 
   <!-- Sets properties only required for releases -->
-  <target name="release-init" depends="gpg-init-1,gpg-init-2,gpg-init-3,compile" >
+  <target name="release-init" depends="release-version-check,gpg-init-1,gpg-init-2,gpg-init-3,compile" >
     <taskdef name="forceUtcTimeZone"
              classname="org.apache.tomcat.buildutil.ForceUtcTimeZone"
              classpath="${tomcat.classes}" />
@@ -3146,6 +3155,7 @@ asf.ldap.username=${release.asfusername}
       <include name="bin/*.sh" />
       <include name=".travis/*.sh" />
       <include name="res/graal/*.sh" />
+      <include name="res/openssl/*.sh" />
     </fixcrlf>
 
     <zip zipfile="${tomcat.release}/v${version}/src/${final-src.name}.zip"
